Remove use of boxed number constructors, reduce deprecation warnings, fix spelling
Change-Id: I118ca934a78a044d574b94a95d1883d68d1234f3